<resources>
    <string name="app_name">My Vehicle</string>
    <string name="title_home">Home</string>
    <string name="register">Register</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="title_edit_insurance">Edit Insurance</string>
    <string name="title_edit_emission">Edit Emission</string>
    <string name="please_wait">Please wait&#8230;</string>

    <string name="title_insurance">Insurance</string>
    <string name="title_emission">Emission</string>
    <string name="title_rc">Rc/Fc</string>
    <string name="title_service_history">Service History</string>
    <string name="title_inbox">Inbox</string>
    <string name="vehicle_info">Vehicle Info</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <string-array name="vehicle_array">
        <item>2 wheeler</item>
        <item>3 wheeler</item>
        <item>4 wheeler</item>
        <item>Commercial</item>
        <item>Passenger</item>
    </string-array>

    <string-array name="insurance_array">
        <item>Add Insurance</item>
        <item>Insurance Doc No</item>
        <item>Vendor Name</item>
        <item>Insurance Start Date</item>
        <item>Insurance End Date</item>
        <item>Remainder Date</item>
    </string-array>

    <string-array name="emission_array">
        <item>Add Emission</item>
        <item>Emission Doc No</item>
        <item>Agency Name</item>
        <item>Emission Start Date</item>
        <item>Emission End Date</item>
        <item>Remainder Date</item>
    </string-array>

    <string-array name="rc_fc_array">
        <item>Add RC</item>
        <item>Customer Name</item>
        <item>Address</item>
        <item>Mobile</item>
        <item>Date of Ownership</item>
    </string-array>

    <string-array name="service_array">
        <item>Add Service History</item>
        <item>RO No</item>
        <item>Service Type</item>
        <item>Mileage</item>
        <item>Date :</item>
        <item>Next Service Date:</item>
        <item>Remainder Date :</item>
    </string-array>

    <string name="customer_name">Customer Name</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="date">Date of Ownership</string>

    <string name="remainder_date">Remainder Date</string>
    <string name="next_due">Next Service Due</string>
    <string name="service_type">Service Type</string>
    <string name="mileage">Mileage</string>

    <string name="service_name">Remainder Service</string>
</resources>
