<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/register" />

    <item
        android:id="@+id/navigation_insurance"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_insurance" />

    <item
        android:id="@+id/navigation_Emission"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_emission" />

    <item
        android:id="@+id/navigation_rc_fc"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_rc" />

    <item
        android:id="@+id/navigation_service_history"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_service_history" />

</menu>
